--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=aplicacionAlbaran
-spring.datasource.url=jdbc:postgresql://<dpg-d1f430emcj7s739cbh90-a>:<5432>/empresataq 
+spring.datasource.url=jdbc:postgresql://dpg-d1f430emcj7s739cbh90-a:5432/empresataq 
 spring.datasource.username=empresataq_user
 spring.datasource.password=BLZ07XT2eka0i1qltBqXE6NFrFBmYlt9
 spring.jpa.hibernate.ddl-auto=update
